# meshgen

./: .clang-format  .gitignore  CMakeLists.txt  input.c  input.h  main.c  mesh.c  mesh.h  output.c  output.h  point.c  point.h  refinement.c  refinement.h  result5.1.edge  result5.1.ele  result5.1.face  result5.1.node  result5.1.vtk  result5.smesh  triangle.c  triangle.h
Examples/: test1.asc  test2.asc  test3.asc  test4.asc  test5.asc
Src/: asc_reader.c  asc_reader.h  input.c  input.h  main.c  map.c  map.h  mesh.c  mesh.h  output.c  output.h  point.c  point.h  refinement.c  refinement.h  triangle.c  triangle.h  utils.c  utils.h
Src/DataStructures/: map.c  map.h  mesh.c  mesh.h  point.cpp  point.h  triangle.c  triangle.h
Src/Readers/: asc_reader.c  asc_reader.h  srtm_reader.c  srtm_reader.h
Src/Refiners/: floater.cpp  floater.h  refinement.c  refinement.h
Src/Utils/: utils.c  utils.h
Src/Writers/: writer.c  writer.h
Test/: equilateral_4_4x5.inp
Tests/: main.c
Tests/Data/: isosceles_4_6x4.inp
cmake/: compiler_flags.cmake  ctags.cmake  manage_dependencies.cmake  myCompilerFlagsCheck.cmake
cmake/Compilers/Clang/: c_compiler_flags.cmake
cmake/Compilers/GNU/: c_compiler_flags.cmake  cxx_compiler_flags.cmake  fortran_compiler_flags.cmake
cmake/Compilers/Intel/: c_compiler_flags.cmake  cxx_compiler_flags.cmake  fortran_compiler_flags.cmake
